package biz.karms.protostream.ioc.marshallers;

/**
 * @author Michal Karm Babacek
 */
public class NameNumberMarshallerV2 extends NameNumberMarshaller {

    @Override
    public String getTypeName() {
        return "sinkitprotobuf.BlacklistedRecordV2List.BlacklistedRecordV2.NameNumber";
    }

}
